--- a/module/Task/view/layout/layout.phtml
+++ b/module/Task/view/layout/layout.phtml
@@ -29,7 +29,7 @@
         ?>
     </head>
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -47,7 +47,7 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
         <div class="container">
             <?= $this->content ?>
             <hr>
